--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ejercicio1.html</title>
     <link rel="stylesheet" href="estilos1.css">
 </head>
+
 <body>
     <div>
         <ul>
             <li>
-                <img src="https://www.adslzone.net/app/uploads/2019/04/borrar-fondo-imagen.jpg" alt="Mario Bross">
-                <p>El video juego de la infancia.</p>
-                <span>
-                    <a href="https://www.minijuegos.com/juego/super-mario-bros"> juego Mario Bross</a>
-                </span>
-                
+                Hola
+            </li>
+            <li>
+                Como
+            </li>
+            <li>
+                Estas?
             </li>
         </ul>
+
+        <img src="https://www.adslzone.net/app/uploads/2019/04/borrar-fondo-imagen.jpg" alt="Mario Bross">
+        <p>El video juego de la infancia.Contiene un span</p>
+        <span>
+            <a href="https://www.minijuegos.com/juego/super-mario-bros"> juego Mario Bross</a>
+        </span>
+
     </div>
 </body>
+
 </html>
